# system-flakes

./: .gitignore  .sops.yaml  CLAUDE.md  README.md  flake.nix  flake.tmp
dev-shells/: cpp-python.nix  cpp.nix  latex.nix  python.nix
home/: common.nix  dlond.nix
home/dlond/: default.nix
home/dlond/modules/networking/: mullvad-vpn.nix  mullvad.nix
home/files/: zshrc
home/files/.config/nvim/: lazy-lock.json
home/files/.config/nvim/lua/custom/: lazy.lua
home/files/.config/nvim/lua/custom/core/: init.lua  keymaps.lua  options.lua
home/files/.config/nvim/lua/custom/plugins/: auto-session.lua  colorscheme.lua  debug.lua  formatting.lua  init.lua  lint.lua  mini.lua  nvim-cmp.lua  telescope.lua  treesitter.lua  which-key.lua
home/files/.config/nvim/lua/custom/plugins/lsp/: lspconfig.lua
home/files/.config/nvim/tmp/: init.lua  lualine.lua
home/files/omp/: my_catppuccin.toml
home/modules/: claude-monitoring.nix  fzf-shared.nix  fzf.nix  git.nix  github-automation.nix  gwt.nix  install-scripts.nix  neovim.nix  nish.nix  nvdev.nix  secrets.nix  tmux.nix  tmuxp.nix  zsh.nix
home/modules/networking/: mullvad-vpn.nix  mullvad.nix
home/users/dlond/: default.nix  linux.nix  mac.nix  tmux.nix
home/users/dlond/configs/: dlond.ocamlformat
home/users/dlond/scripts/zsh/: nn.zsh
home/users/dlond/themes/: dlond.omp.json
hosts/linux/: default.nix
hosts/mbp/: default.nix
hosts/mbp/modules/system/security/: killswitch.nix
hosts/modules/system/security/: killswitch.nix
lib/: import-modules.nix  mkPkgs.nix  packages.nix  shared.nix
modules/: cli-tools.nix  common.nix
modules/common/: global.nix  packages.nix  programs.nix
modules/darwin/: base.nix  fonts.nix  homebrew.nix  user.nix
modules/home/: base.nix  common.nix  default.nix
modules/home/programs/: bat.nix  direnv.nix  fzf.nix  oh-my-posh.nix  zoxide.nix
modules/home/programs/themes/: dlond.omp.toml
modules/home/users/dlond/: default.nix  git.nix  zsh.nix
modules/system/: common.nix  default.nix
patches/: hm-fix-launchd-io-error.patch
scripts/: harmonix  nix-init-project
secrets/: github-netrc.yaml  secrets.yaml  wireguard.yaml
templates/: README.md
templates/cpp/: .clangd  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  flake.nix
templates/cpp-lowlat/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  flake.nix
templates/cpp-lowlat/docs/: Doxyfile.in  conf.py.in  index.rst
templates/cpp/docs/: index.rst
templates/cpp/include/__PROJECT_NAME__/: calculator.h  core.h
templates/cpp/include/hello/: calculator.h  core.h
templates/cpp/include/myproject/: calculator.h  core.h
templates/cpp/src/: calculator.cpp  core.cpp  main.cpp
templates/cpp/tests/: CMakeLists.txt  test_calculator.cpp  test_core.cpp
templates/ocaml/: .envrc  .gitignore  README.md  dune-project  flake.nix
templates/ocaml/lib/: dune  greet.ml
templates/ocaml/test/: dune  test_greet.ml
templates/python/: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
templates/python-cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  flake.nix  pyproject.toml
templates/python-cpp/include/myproject/: core.h  math_ops.h
templates/python-cpp/python/myproject/: __init__.py  high_level.py
templates/python-cpp/src/: bindings.cpp  core.cpp  main.cpp  math_ops.cpp
templates/python-cpp/tests/: CMakeLists.txt  test_cpp_core.cpp  test_python.py
templates/python-jax/: README.md  flake.nix  requirements.txt
templates/python/src/__PROJECT_NAME__/: __init__.py  __main__.py
templates/python/src/myproject/: __main__.py  core.py
templates/python/tests/: __init__.py  test_core.py
themes/: dlond.omp.toml
themes/catppuccin/: dlond.omp.json
