(lang dune 3.20)

(name myproject)

(generate_opam_files true)

(source
 (github username/myproject))

(authors "Your Name <your.email@example.com>")

(maintainers "Your Name <your.email@example.com>")

(license MIT)

(package
 (name myproject)
 (synopsis "Short description of your project")
 (description "Longer description of your project")
 (depends
   cmdliner

   ;; Development tools (installed with --with-dev-setup)
   (ocaml-lsp-server :with-dev-setup)
   (odoc :with-dev-setup)
   (ocamlformat :with-dev-setup)
   (utop :with-dev-setup)

   ;; Testing (installed with --with-test)
   (alcotest :with-test)))
