[project]
name = "myproject"
version = "0.1.0"
description = "A Python project with C++ extensions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["myproject"]
package-dir = {"" = "python"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=python/myproject --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["python", "tests"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"